--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<title>SËPTIMÅ</title>
 		<link rel="stylesheet" href="main.css" />
+		<script src="vec2.js"></script>
+		<script src="tile.js"></script>
+		<script src="shape.js"></script>
 		<script src="main.js"></script>
 	</head>
 
