--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
 	<body>
 		<header><h1>MÅJÅLES SËPTIMÅ - TETRIS</h1></header>
 		<main>
-			<section>
-				<div id="menu" class="menu">
-					<button class="play-button" id="play-button" disabled> Načítání </button>
-				</div>
-			</section>
-			<section class="game"> <!-- TODO: na mobil nebo pokud se ma hra dynamicky pridavat (+ vice her najednou), tak to asi bude lepsi davat pred menu -->
+			<section id="game_sec" class="game" style="display:none">
 				<canvas id="board" class="game-board"></canvas>
 				<div class="info">
 					<canvas id="next" class="next"></canvas>
 					<p class="infotext">Skóre: <span id="score">0</span></p>
 					<p class="infotext">Řádky: <span id="lines">0</span></p>
 					<div class="controls">
+						<button class="control-button" id="rotate-ccw-button" onclick="move_shape('rotate_counterclockwise')">↪</button>
+						<span style="display:hidden;"></span>
+						<button class="control-button" id="rotate-cw-button" onclick="move_shape('rotate_clockwise')">↩</button>
 						<button class="control-button" id="move-left-button" onclick="move_shape('move_left')">⬅</button>
 						<button class="control-button" id="move-down-button" onclick="move_shape('move_down')">⬇</button>
 						<button class="control-button" id="move-right-button" onclick="move_shape('move_right')">➡</button>
-						<button class="control-button" id="rotate-ccw-button" onclick="move_shape('rotate_counterclockwise')">↪</button>
-						<span style="display:hidden;"></span>
-						<button class="control-button" id="rotate-cw-button" onclick="move_shape('rotate_clockwise')">↩</div>
 					</div>
+				</div>
+			</section>
+			<section id="menu_sec">
+				<div id="menu" class="menu">
+					<button class="play-button" id="play-button" disabled> Načítání </button>
+				</div>
 			</section>
 		</main>
 	</body>
