--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="cs">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=0.8" />
 		<title>SËPTIMÅ</title>
 		<link rel="stylesheet" href="main.css" />
 		<script src="vec2.js"></script>
@@ -19,9 +20,9 @@
 					<p class="infotext">Skóre: <span id="score">0</span></p>
 					<p class="infotext">Řádky: <span id="lines">0</span></p>
 					<div class="controls">
-						<button class="control-button" id="rotate-ccw-button" onclick="move_shape('rotate_counterclockwise')">↪</button>
-						<span style="display:hidden;"></span>
 						<button class="control-button" id="rotate-cw-button" onclick="move_shape('rotate_clockwise')">↩</button>
+						<span style="display:hidden;"></span>
+						<button class="control-button" id="rotate-ccw-button" onclick="move_shape('rotate_counterclockwise')">↪</button>
 						<button class="control-button" id="move-left-button" onclick="move_shape('move_left')">⬅</button>
 						<button class="control-button" id="move-down-button" onclick="move_shape('move_down')">⬇</button>
 						<button class="control-button" id="move-right-button" onclick="move_shape('move_right')">➡</button>
