bring back multi-play infrastructure :)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<button
 							class="control-button"
 							id="rotate-cw-button"
-							onclick="move_shape('rotate_clockwise')"
+							onclick="try_movement_everywhere('rotate_clockwise')"
 						>
 							↩
 						</button>
@@ -31,28 +31,28 @@
 						<button
 							class="control-button"
 							id="rotate-ccw-button"
-							onclick="move_shape('rotate_counterclockwise')"
+							onclick="try_movement_everywhere('rotate_counterclockwise')"
 						>
 							↪
 						</button>
 						<button
 							class="control-button"
 							id="move-left-button"
-							onclick="move_shape('move_left')"
+							onclick="try_movement_everywhere('move_left')"
 						>
 							⬅
 						</button>
 						<button
 							class="control-button"
 							id="move-down-button"
-							onclick="move_shape('move_down')"
+							onclick="try_movement_everywhere('move_down')"
 						>
 							⬇
 						</button>
 						<button
 							class="control-button"
 							id="move-right-button"
-							onclick="move_shape('move_right')"
+							onclick="try_movement_everywhere('move_right')"
 						>
 							➡
 						</button>
