Add retry button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<canvas id="board" class="game-board"></canvas>
 				<div class="info">
 					<canvas id="next" class="next"></canvas>
+					<button id="retry-button" class="retry-button" style="display:none" disabled>Zkusit znovu</button>
 					<p class="infotext">Skóre: <span id="score">0</span></p>
 					<p class="infotext">Řádky: <span id="lines">0</span></p>
 					<div class="controls">
