--- a/index.html
+++ b/index.html
@@ -9,15 +9,30 @@
 		<script src="tile.js"></script>
 		<script src="shape.js"></script>
 		<script src="main.js"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
-		<header><h1>MÅJÅLES SËPTIMÅ - TETRIS</h1></header>
+		<header>
+			<h1><b>MÅJÅLES SËPTIMÅ - TETRIS</b></h1>
+		</header>
 		<main>
 			<section id="game_sec" class="game" style="display: none">
 				<canvas id="board" class="game-board"></canvas>
 				<div class="info">
 					<canvas id="next" class="next"></canvas>
-					<button id="retry-button" class="retry-button" style="display:none" disabled>Zkusit znovu</button>
+					<button
+						id="retry-button"
+						class="retry-button"
+						style="display: none"
+						disabled
+					>
+						Zkusit znovu
+					</button>
 					<p class="infotext">Skóre: <span id="score">0</span></p>
 					<p class="infotext">Řádky: <span id="lines">0</span></p>
 					<div class="controls">
