Use FontAwesome icons

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 			href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap"
 			rel="stylesheet"
 		/>
+		<script
+			src="https://kit.fontawesome.com/64294dcdd8.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body>
 		<header>
@@ -41,7 +45,7 @@
 							id="rotate-cw-button"
 							onclick="try_movement_everywhere('rotate_clockwise')"
 						>
-							↩
+							<i class="fa-solid fa-rotate-right"></i>
 						</button>
 						<span style="display: hidden"></span>
 						<button
@@ -49,28 +53,28 @@
 							id="rotate-ccw-button"
 							onclick="try_movement_everywhere('rotate_counterclockwise')"
 						>
-							↪
+							<i class="fa-solid fa-rotate-left"></i>
 						</button>
 						<button
 							class="control-button"
 							id="move-left-button"
 							onclick="try_movement_everywhere('move_left')"
 						>
-							⬅
+							<i class="fa-solid fa-arrow-left"></i>
 						</button>
 						<button
 							class="control-button"
 							id="move-down-button"
 							onclick="try_movement_everywhere('move_down')"
 						>
-							⬇
+							<i class="fa-solid fa-arrow-down"></i>
 						</button>
 						<button
 							class="control-button"
 							id="move-right-button"
 							onclick="try_movement_everywhere('move_right')"
 						>
-							➡
+							<i class="fa-solid fa-arrow-right"></i>
 						</button>
 					</div>
 				</div>
