Center the "next shape" canvas
It looked really off on mobile - everything was centered apart from this one canvas

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<section id="game_sec" class="game" style="display: none">
 				<canvas id="board" class="game-board"></canvas>
 				<div class="info">
-					<canvas id="next" class="next"></canvas>
+					<canvas id="next" class="next centered"></canvas>
 					<button
 						id="retry-button"
 						class="retry-button"
