Add partial credits and instructions
Will be finished soon

--- a/index.html
+++ b/index.html
@@ -74,6 +74,23 @@
 					</button>
 				</div>
 			</section>
+			<section class="credits-and-instructions-wrap">
+				<h3>Ovládání</h3>
+				<p class="credits-and-instructions">
+					Hru lze ovládat pomocí klávesnice (šipky či WASD + QE na
+					rotace) nebo pomocí tlačítek. <br />
+					Otočení dílku ve směru hodinových ručiček: Šipka
+					nahoru/klávesa E/tlačítko s ikonou
+					<i class="fa-solid fa-rotate-right"></i>
+				</p>
+				<p class="credits-and-instructions">
+					Vytvořili
+					<a href="https://github.com/Pandicon/">Martin Kudrna</a>
+					a
+					<a href="https://github.com/bipentihexium">Filip Majer</a>,
+					R7.A
+				</p>
+			</section>
 		</main>
 	</body>
 </html>
