Add full instructions and credits

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 				<canvas class="game-board"></canvas>
 				<div class="info">
 					<canvas class="next"></canvas>
-					<button class="retry-button" style="display:none" disabled>Zkusit znovu</button>
+					<button class="retry-button" style="display: none" disabled>
+						Zkusit znovu
+					</button>
 					<p class="infotext">Skóre: <span class="score">0</span></p>
 					<p class="infotext">Řádky: <span class="lines">0</span></p>
 					<div class="controls">
@@ -77,18 +79,35 @@
 			<section class="credits-and-instructions-wrap">
 				<h3>Ovládání</h3>
 				<p class="credits-and-instructions">
-					Hru lze ovládat pomocí klávesnice (šipky či WASD + QE na
+					Hru lze ovládat pomocí klávesnice (šipky či ASD + QE na
 					rotace) nebo pomocí tlačítek. <br />
 					Otočení dílku ve směru hodinových ručiček: Šipka
 					nahoru/klávesa E/tlačítko s ikonou
-					<i class="fa-solid fa-rotate-right"></i>
+					<i class="fa-solid fa-rotate-right"></i> <br />
+					Otočení dílku proti směru hodinových ručiček: Klávesa
+					Q/tlačítko s ikonou
+					<i class="fa-solid fa-rotate-left"></i> <br />
+					Posun dílku doleva: Šipka vlevo/klávesa A/tlačítko s ikonou
+					<i class="fa-solid fa-arrow-left"></i> <br />
+					Posun dílku dolů: Šipka dolů/klávesa S/tlačítko s ikonou
+					<i class="fa-solid fa-arrow-down"></i> <br />
+					Posun dílku doprava: Šipka vpravo/klávesa D/tlačítko s
+					ikonou
+					<i class="fa-solid fa-arrow-right"></i>
 				</p>
+				<h3>Vytvořili</h3>
 				<p class="credits-and-instructions">
-					Vytvořili
+					Hru vytvořili
 					<a href="https://github.com/Pandicon/">Martin Kudrna</a>
 					a
 					<a href="https://github.com/bipentihexium">Filip Majer</a>,
-					R7.A
+					R7.A <br />
+					Textury vytvořil/a/i/y "autor/ka/ři textur", R7.A <br />
+					Kód lze nalézt na
+					<a
+						href="https://github.com/septima2024/septima2024.github.io"
+						>GitHubu</a
+					>
 				</p>
 			</section>
 		</main>
