controls/credits section size

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					</button>
 				</div>
 			</section>
-			<section class="credits-and-instructions-wrap">
+			<section id="notes_sec" class="credits-and-instructions-wrap">
 				<h3>Ovládání</h3>
 				<p class="credits-and-instructions">
 					Hru lze ovládat pomocí klávesnice (šipky či ASD + QE na
