Center the next shape canvas

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<section class="game" style="display: none">
 				<canvas class="game-board"></canvas>
 				<div class="info">
-					<canvas class="next"></canvas>
+					<canvas class="next centered"></canvas>
 					<button class="retry-button" style="display: none" disabled>
 						Zkusit znovu
 					</button>
