--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=0.8" />
 		<title>SËPTIMÅ</title>
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		<link rel="stylesheet" href="main.css" />
 		<script src="vec2.js"></script>
 		<script src="tile.js"></script>
