Fix MÄJÅLES text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<header>
-			<h1><b>MÅJÅLES SËPTIMÅ - TETRIS</b></h1>
+			<h1><b>MÄJÅLES SËPTIMÅ - TETRIS</b></h1>
 		</header>
 		<main id="main">
 			<section class="game" style="display: none">
