Add credits for textures

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					a
 					<a href="https://github.com/bipentihexium">Filip Majer</a>,
 					R7.A <br />
-					Textury vytvořil/a/i/y "autor/ka/ři textur", R7.A <br />
+					Textury vytvořily Alžběta Nedvědová a Helena Spoustová, R7.A <br />
 					Kód lze nalézt na
 					<a
 						href="https://github.com/septima2024/septima2024.github.io"
