fixes, add select for game count

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
 							Načítání
 						</button>
 						<p id="menu-note" class="note">*před hraním online si přečtěte instrukce</p>
+						<select name="ngames_sel" id="ngames_sel">
+							<option value="1">normal (1)</option>
+							<option value="2">2</option>
+							<option value="3">3</option>
+							<option value="4">4</option>
+						</select>
 					</div>
 				</div>
 			</section>
