Add a note when connection fails

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<header>
 			<h1><b>MÄJÅLES SËPTIMÅ - TETRIS</b></h1>
 		</header>
+		<p id="connection-fail" style="display:none">Nepovedlo se připojit k serveru, hrát můžete jen offline.</p>
 		<main id="main">
 			<section class="game" style="display: none">
 				<canvas class="game-board"></canvas>
