replace broken arrow with text :)

--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
 			<section id="leaderboard" class="lb_sec" style="display:none">
 				<h3>
 					Nejlepší hry (<span id="lb-gc">1</span>x)
-					<button onclick="lb_refresh()">
-						<i class="fa-solid fa-rotatrotate-right"></i>
-					</button>
+					<button onclick="lb_refresh()">načíst znovu</button>
 				</h3>
 				<ol id="leaderboard-list" class="lb_list">
 				</ol>
